# pies_openapi_spacetraders_api_trimmed

./: Cargo.toml  README.md  gen.bat
.openapi-generator/: FILES
src/: lib.rs
src/models/: accept_contract_200_response.rs  accept_contract_200_response_data.rs  contract.rs  contract_terms.rs  cooldown.rs  create_chart_201_response.rs  create_chart_201_response_data.rs  create_ship_ship_scan_201_response.rs  create_ship_ship_scan_201_response_data.rs  create_ship_system_scan_201_response.rs  create_ship_system_scan_201_response_data.rs  create_ship_waypoint_scan_201_response.rs  create_ship_waypoint_scan_201_response_data.rs  create_survey_201_response.rs  create_survey_201_response_data.rs  deliver_contract_200_response.rs  deliver_contract_200_response_data.rs  dock_ship_200_response.rs  extract_resources_201_response.rs  extract_resources_201_response_data.rs  extract_resources_201_response_data_events_inner.rs  extract_resources_request.rs  extraction.rs  fulfill_contract_200_response.rs  get_agents_200_response.rs  get_construction_200_response.rs  get_contract_200_response.rs  get_contracts_200_response.rs  get_faction_200_response.rs  get_factions_200_response.rs  get_jump_gate_200_response.rs  get_market_200_response.rs  get_my_agent_200_response.rs  get_my_ship_200_response.rs  get_my_ship_cargo_200_response.rs  get_my_ships_200_response.rs  get_repair_ship_200_response.rs  get_repair_ship_200_response_data.rs  get_scrap_ship_200_response.rs  get_scrap_ship_200_response_data.rs  (+72 more)
