[package]
name = "pies_openapi_spacetraders_api_trimmed"
version = "2024.3.24"
authors = ["joel@spacetraders.io"]
description = "SpaceTraders is an open-universe game and learning platform that offers a set of HTTP endpoints to control a fleet of ships and explore a multiplayer universe.  The API is documented using [OpenAPI](https://github.com/SpaceTradersAPI/api-docs). You can send your first request right here in your browser to check the status of the game server.  ```json http {   \"method\": \"GET\",   \"url\": \"https://api.spacetraders.io/v2\", } ```  Unlike a traditional game, SpaceTraders does not have a first-party client or app to play the game. Instead, you can use the API to build your own client, write a script to automate your ships, or try an app built by the community.  We have a [Discord channel](https://discord.com/invite/jh6zurdWk5) where you can share your projects, ask questions, and get help from other players.   "
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/Pieresqi/pies_openapi_spacetraders_api_trimmed"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
